<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A2D82">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#D000F3"
            android:elevation="6dp"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/title"
                android:textColor="#9A00D6"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- User ID -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/userId"
                android:text="@string/user_id"
                android:textColor="#5A2D82"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:background="#000"
                android:hint="@string/user_id"
                android:textColor="#fff" />

            <!-- User Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/userName"
                android:text="@string/user_name"
                android:textColor="#5A2D82"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:background="#000"
                android:hint="@string/user_name"
                android:textColor="#fff" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/email"
                android:text="@string/email"
                android:textColor="#5A2D82"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="#000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#fff" />

            <!-- Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/password"
                android:text="@string/password"
                android:textColor="#5A2D82"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:background="#000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#fff" />

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="#000"
                android:text="@string/sign_in"
                android:textColor="#D000F3" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
